opam-version: "2.0"
name: "blip"
synopsis: "BLIP: Bloom-then-Flip"
maintainer: "TG x Thoth <*@tg-x.net>"
authors: ["TG x Thoth <*@tg-x.net>"]
tags: [ "bloom" "filter" "flip" "" ]
license: "AGPL-3.0-only"
homepage: "https://github.com/p2pcollab/ocaml-blip"
doc: "https://p2pcollab.net/doc/ocaml/blip/"
dev-repo: "git+https://github.com/p2pcollab/ocaml-blip.git"
bug-reports: "https://github.com/p2pcollab/ocaml-blip/issues"
depends:
[
  "dune" {build & >= "1.0.0"}
  "ounit" {with-test}
  "bloomf" {with-test}
  "bitv"
  "nocrypto"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
